--- a/app/views/shared/_offence_info.html.erb
+++ b/app/views/shared/_offence_info.html.erb
@@ -5,11 +5,11 @@
     <td class="govuk-table__cell govuk-!-width-one-half"></td>
   </tr>
   <tr class="govuk-table__row">
-    <td class="govuk-table__cell govuk-!-width-one-half">Main Offence</td>
+    <td class="govuk-table__cell govuk-!-width-one-half">Main offence</td>
     <td class="govuk-table__cell table_cell__left_align  govuk-!-width-one-half"><%= @prisoner.main_offence %></td>
   </tr>
   <tr class="govuk-table__row">
-      <td class="govuk-table__cell">Release date / parole eligibility</td>
+      <td class="govuk-table__cell">Release parole/eligibility</td>
       <td class="govuk-table__cell table_cell__left_align"><%= format_date(@prisoner.release_date) %></td>
     </tr>
   </tbody>
