Move sass rails asset helper config
- Move $govuk-image-url-function and $govuk-asset-url-function to
gov_uk.scss. This fixes a loading issue that results in GovUK Frontend
assets returning 404's

--- a/app/assets/stylesheets/gov_uk.scss
+++ b/app/assets/stylesheets/gov_uk.scss
@@ -1,3 +1,5 @@
 $govuk-global-styles: true;
+$govuk-image-url-function: "image-url";
+$govuk-font-url-function: "asset-url";
 
 @import "govuk-frontend/all";
