--- a/app/views/overrides/new.html.erb
+++ b/app/views/overrides/new.html.erb
@@ -1,58 +1,59 @@
 <%= render :partial => "/shared/backlink", :locals => { :page => new_allocations_path(@prisoner.offender_no) } %>
 
-
 <% if @override.errors.count > 0 %>
   <%= render :partial => "/shared/validation_errors", :locals => { :errors => @override.errors } %>
 <% end %>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+    <%= form_tag(overrides_path, method: :post, id: "override_form")  do %>
 
-<div>
-  <%= form_tag(overrides_path, method: :post, id: "override_form")  do %>
-    <h1 class="govuk-heading-xl govuk-!-margin-top-4">Choose reason for changing recommended grade</h1>
-    <div class='govuk-!-margin-top-6'>
-      <div class="govuk-form-group <% if @override.errors[:override_reasons].present? %>govuk-form-group--error<% end %>">
-        <fieldset class="govuk-fieldset" aria-describedby="override-conditional-hint">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-            <h1 class="govuk-fieldset__heading">Choose reason for changing
-              recommended grade</h1>
-          </legend>
-          <div class="govuk-checkboxes" data-module="checkboxes">
-            <%= hidden_field_tag("override[nomis_offender_id]", @prisoner.offender_no) %>
-            <%= hidden_field_tag("override[nomis_staff_id]", @pom.staff_id) %>
-            <% if @recommended_pom == 'Prison' %>
+      <h1 class="govuk-heading-xl govuk-!-margin-top-4">
+        <%= "Why are you allocating a probation officer POM?" if @recommended_pom == 'Prison' %>
+        <%= "Why are you allocating a prison officer POM?" if @recommended_pom == 'Probation' %>
+      </h1>
+      <div class='govuk-!-margin-top-4'>
+        <div class="govuk-form-group <% if @override.errors[:override_reasons].present? %>govuk-form-group--error<% end %>">
+          <fieldset class="govuk-fieldset" aria-describedby="override-conditional-hint">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s govuk-!-margin-bottom-4">
+              <h1 class="govuk-fieldset__heading">Choose all that apply:</h1>
+            </legend>
+            <div class="govuk-checkboxes" data-module="checkboxes">
+              <%= hidden_field_tag("override[nomis_offender_id]", @prisoner.offender_no) %>
+              <%= hidden_field_tag("override[nomis_staff_id]", @pom.staff_id) %>
               <div class="govuk-checkboxes__item">
                 <%= check_box_tag("override[override_reasons][]", "complex",  override_reason_contains(@override, 'complex'), id: "override-1", class: "govuk-checkboxes__input") %>
-                <%= label_tag "override[override_reasons][]", "Prisoner assessed as too complex for #{@recommended_pom} Officer POM", class: 'govuk-label govuk-checkboxes__label' %>
+                <%= label_tag "override[override_reasons][]", @complex_label, class: 'govuk-label govuk-checkboxes__label' %>
               </div>
-            <% end %>
-            <div class="govuk-checkboxes__item">
-              <%= check_box_tag("override[override_reasons][]", "no-staff", override_reason_contains(@override, 'no-staff'), id: "override-2", class: "govuk-checkboxes__input") %>
-              <%= label_tag "override[override_reasons][]", "No avaliable staff at recommended grade", class: 'govuk-label govuk-checkboxes__label' %>
-            </div>
-            <div class="govuk-checkboxes__item">
-              <%= check_box_tag("override[override_reasons][]", "continuity", override_reason_contains(@override, 'continuity'), id: "override-3", class: "govuk-checkboxes__input") %>
-              <%= label_tag "override[override_reasons][]", "Maintain continuity of previous POM", class: 'govuk-label govuk-checkboxes__label' %>
-            </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="override-conditional-4" name="override[override_reasons][]" type="checkbox" value="other" data-aria-controls="override-4"
-                <%= 'checked=checked' if override_reason_contains(@override, 'other') %> >
-              <label class="govuk-label govuk-checkboxes__label"
-                      for="override-conditional-4">Other</label>
-            </div>
+              <div class="govuk-checkboxes__item">
+                <%= check_box_tag("override[override_reasons][]", "no-staff", override_reason_contains(@override, 'no-staff'), id: "override-2", class: "govuk-checkboxes__input") %>
+                <%= label_tag "override[override_reasons][]", "No available #{@recommended_pom.downcase} officer POMs", class: 'govuk-label govuk-checkboxes__label' %>
+              </div>
+              <div class="govuk-checkboxes__item">
+                <%= check_box_tag("override[override_reasons][]", "continuity", override_reason_contains(@override, 'continuity'), id: "override-3", class: "govuk-checkboxes__input") %>
+                <%= label_tag "override[override_reasons][]", "This POM has worked with the prisoner before", class: 'govuk-label govuk-checkboxes__label' %>
+              </div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="override-conditional-4" name="override[override_reasons][]" type="checkbox" value="other" data-aria-controls="override-4"
+                  <%= 'checked=checked' if override_reason_contains(@override, 'other') %> >
+                <label class="govuk-label govuk-checkboxes__label"
+                        for="override-conditional-4">Other reason</label>
+              </div>
 
-            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="override-4">
-              <div class="govuk-form-group <% if @override.errors[:more_detail].present? %>govuk-form-group--error<% end %>">
-                <label class="govuk-label" for="provide-detail">Please provide detail
-                  here</label>
-                <textarea class="govuk-textarea" id="more-detail" name="override[more_detail]" rows="3" aria-describedby="more-detail-hint"></textarea>
+              <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="override-4">
+                <div class="govuk-form-group <% if @override.errors[:more_detail].present? %>govuk-form-group--error<% end %>">
+                  <label class="govuk-label" for="provide-detail">Please provide detail
+                    here</label>
+                  <textarea class="govuk-textarea" id="more-detail" name="override[more_detail]" rows="3" aria-describedby="more-detail-hint"></textarea>
+                </div>
               </div>
             </div>
-          </div>
-        </fieldset>
+          </fieldset>
+        </div>
+        <%= submit_tag "Continue", role: "button", draggable: "false", class: "govuk-button" %>
       </div>
-      <%= submit_tag "Continue", role: "button", draggable: "false", class: "govuk-button" %>
-    </div>
-  <% end %>
+    <% end %>
   </div>
+</div>
 
   <%= render :partial => "/shared/analytics_form_event",
              :locals => {
