Override content changes

--- a/app/views/allocations/_pom_tables.html.erb
+++ b/app/views/allocations/_pom_tables.html.erb
@@ -55,9 +55,9 @@ time left to serve into account.</p>
   <summary class="govuk-details__summary">
     <span class="govuk-details__summary-text">
       <% if @prisoner.current_responsibility == 'Probation' %>
-        Show active Prison officer POMs
+        Show active prison officer POMs
       <% else %>
-        Show active Probation officer POMs
+        Show active probation officer POMs
       <% end %>
     </span>
   </summary>
