--- a/app/assets/stylesheets/pagination.scss
+++ b/app/assets/stylesheets/pagination.scss
@@ -1,5 +1,8 @@
 
 .pagination {
+    font-family: "nta", Arial, sans-serif;
+    font-size: 19px;
+
     .result-count {
         text-align: right;
     }
