--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,5 +1,9 @@
 <h1 class="govuk-heading-xl">Dashboard</h1>
 
+<div class="govuk-!-margin-bottom-6 govuk-!-margin-top-6">
+<%= render "search/search_box" %>
+</div>
+
 <h2 class="govuk-heading-m no-bottom-margin">Allocate a prisoner to an offender manager</h2>
 <hr class="govuk-section-break govuk-section-break--visible">
 <div class="govuk-grid-row dashboard-row">
