--- a/app/views/poms/_caseload.html.erb
+++ b/app/views/poms/_caseload.html.erb
@@ -23,7 +23,7 @@
       <td aria-label="Release date" class="govuk-table__cell "><%= sentence.release_date %></td>
       <td aria-label="Tier" class="govuk-table__cell "><%= allocation.allocated_at_tier %></td>
       <td aria-label="Allocation date" class="govuk-table__cell "><%= format_date(allocation.created_at) %></td>
-      <td aria-label="Role" class="govuk-table__cell ">N/A</td>
+      <td aria-label="Role" class="govuk-table__cell "><%= allocation.responsibility %></td>
     </tr>
     <% end %>
   </tbody>
