Allow switching prisons
If a POM has acess to more than one prison, then this PR allows them to
switch between them.

--- a/app/views/poms/new_cases.html.erb
+++ b/app/views/poms/new_cases.html.erb
@@ -1,3 +1,7 @@
+<% content_for :switcher do %>
+  <%= render '/layouts/prison_switcher' %>
+<% end %>
+
 <% if @pom.blank? %>
   <h2 class="govuk-heading-l">No new cases </h2>
 <% else %>
