--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -1,3 +1,6 @@
+<% content_for :switcher do %>
+  <%= render '/layouts/prison_switcher' %>
+<% end %>
 
 <h1 class="govuk-heading-xl govuk-!-margin-top-4 govuk-!-margin-bottom-4">Search</h1>
 
