--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,3 +1,7 @@
+<% content_for :switcher do %>
+  <%= render '/layouts/prison_switcher' %>
+<% end %>
+
 <h1 class="govuk-heading-xl">Dashboard</h1>
 
 <div class="govuk-!-margin-bottom-6 govuk-!-margin-top-6">
