--- a/app/views/poms/index.html.erb
+++ b/app/views/poms/index.html.erb
@@ -1,3 +1,8 @@
+
+<% content_for :switcher do %>
+  <%= render '/layouts/prison_switcher' %>
+<% end %>
+
 <h1 class="govuk-heading-xl">Prison Offender Managers</h1>
 
 <div class="govuk-tabs" data-module="tabs">
