--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,9 +10,9 @@
     <ul id="navigation" class="hmpps-header__navigation" aria-label="Top Level Navigation">
       <% if current_user.present? %>
       <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
-        <span class='govuk-body hmpss-header__prison-identifier govuk-!-font-size-16'>
-          <%= PrisonService.name_for(active_caseload) %><span class="govuk-!-padding-left-1">|</span></span>
-        <a href='#' class='govuk-header__link govuk-!-font-size-16 govuk-!-padding-left-1'><%= current_user %></a>
+        <a href='#' class='govuk-header__link govuk-!-font-size-16 govuk-!-padding-left-1'>
+          <%= current_user %>
+        </a>
       </li>
       <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
         <%= link_to 'Sign out', signout_path  %>
