Display flash messages
- When an allocation is saved successfully the user will see a 'Success'
flash message appear once they are re-directed to the 'Make allocations'
tab
- Conversely, if the save is unsuccessful an 'unsuccessful' flash
message will appear

--- a/app/views/summary/unallocated.html.erb
+++ b/app/views/summary/unallocated.html.erb
@@ -1,3 +1,15 @@
+<% if notice.present? %>
+  <p class="notification govuk-!-margin-bottom-9" role="group" aria-labelledby="notice-heading">
+    <%= notice %>
+  </p>
+<% end %>
+
+<% if alert.present? %>
+  <p class="alert govuk-!-margin-bottom-9" role="group" aria-labelledby="error-summary-heading">
+    <%= alert %>
+  </p>
+<% end %>
+
 <h1 class="govuk-heading-xl">Allocations</h1>
 
 <%= render(:partial => 'tabs_start', :locals => {:active => :unallocated}) %>
