Update reallocation view
Two small changes:
1) Rename title to Reallocate from Allocate
2) Rename action reallocate to allocate

--- a/app/views/allocations/edit.html.erb
+++ b/app/views/allocations/edit.html.erb
@@ -1,6 +1,6 @@
 <%= render :partial => "/shared/backlink", :locals => {:page => summary_unallocated_path} %>
 
-<h1 class="govuk-heading-l govuk-!-margin-bottom-5">Allocate a Prison Offender Manager</h1>
+<h1 class="govuk-heading-l govuk-!-margin-bottom-5">Reallocate a Prison Offender Manager</h1>
 
 <%= render 'shared/basic_prisoner_info' %>
 
