--- a/app/assets/stylesheets/prison_switcher.scss
+++ b/app/assets/stylesheets/prison_switcher.scss
@@ -5,10 +5,9 @@
         display: inline-block;
     }
     a {
-        position: absolute;
-        display: inline-block;
         line-height: 40px;
         margin-bottom: 0;
         margin-left: 20px;
+        float: right;
     }
  }
