--- a/app/views/poms/show.html.erb
+++ b/app/views/poms/show.html.erb
@@ -1,6 +1,6 @@
 
 <h1 class="govuk-heading-xl"><%= @pom.full_name %></h1>
-<h2 class="govuk-heading-m">email@example.com</h2>
+<h2 class="govuk-heading-m"><%= @pom.emails.first %></h2>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-one-quarter">
