Remove sortable links from table headers

--- a/app/views/poms/_caseload.html.erb
+++ b/app/views/poms/_caseload.html.erb
@@ -2,17 +2,12 @@
 <table class="govuk-table responsive tablesorter">
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="col"><a
-        class='table-sorter__link' href='#'>Prisoner name</a></th>
+      <th class="govuk-table__header" scope="col">Prisoner name</th>
       <th class="govuk-table__header" scope="col">Prisoner number</th>
-      <th class="govuk-table__header" scope="col">
-        <a class="table-sorter__link" href="#">Release/parole<br/>eligibility</a></th>
-      <th class="govuk-table__header" scope="col">
-        <a class="table-sorter__link" href="#">Tier</a></th>
-      <th class="govuk-table__header" scope="col">
-        <a class="table-sorter__link" href="#">Allocation date</a></th>
-      <th class="govuk-table__header" scope="col">
-        <a class="table-sorter__link" href="#">Role</a></th>
+      <th class="govuk-table__header" scope="col">Release/parole<br/>eligibility</th>
+      <th class="govuk-table__header" scope="col">Tier</th>
+      <th class="govuk-table__header" scope="col">Allocation date</th>
+      <th class="govuk-table__header" scope="col">Role</th>
     </tr>
   </thead>
   <tbody class="govuk-table__body">
