--- a/app/views/poms/_probation_poms_table.html.erb
+++ b/app/views/poms/_probation_poms_table.html.erb
@@ -1,23 +1,14 @@
 <table class="govuk-table responsive tablesorter">
   <thead class="govuk-table__head">
   <tr class="govuk-table__row">
-    <th class="govuk-table__header" scope="col"><a
-      class='table-sorter__link' href='#'>POM name</a></th>
-    <th class="govuk-table__header" scope="col">
-      <a class="table-sorter__link" href="#">Tier A<br/>cases</a></th>
-    <th class="govuk-table__header" scope="col">
-      <a class="table-sorter__link" href="#">Tier B<br/>cases</a></th>
-    <th class="govuk-table__header" scope="col">
-      <a class="table-sorter__link" href="#">Tier C<br/>cases</a></th>
-    <th class="govuk-table__header" scope="col">
-      <a class="table-sorter__link" href="#">Tier D<br/>cases</a></th>
-    <th class="govuk-table__header" scope="col">
-      <a class="table-sorter__link" href="#">Total</a></th>
-    <th class="govuk-table__header header-width__8" scope="col">
-      <a
-        class='table-sorter__link' href='#'>Working<br/>pattern</a></th>
-    <th class="govuk-table__header" scope="col"><a
-      class='table-sorter__link' href='#'>Status</a></th>
+    <th class="govuk-table__header" scope="col">POM name</th>
+    <th class="govuk-table__header" scope="col">Tier A<br/>cases</th>
+    <th class="govuk-table__header" scope="col">Tier B<br/>cases</th>
+    <th class="govuk-table__header" scope="col">Tier C<br/>cases</th>
+    <th class="govuk-table__header" scope="col">Tier D<br/>cases</th>
+    <th class="govuk-table__header" scope="col">Total</th>
+    <th class="govuk-table__header header-width__8" scope="col">Working<br/>pattern</th>
+    <th class="govuk-table__header" scope="col">Status</th>
     <th class="govuk-table__header sorter-false" scope="col">Action</th>
   </tr>
   </thead>
