--- a/app/views/summary/allocated.html.erb
+++ b/app/views/summary/allocated.html.erb
@@ -10,14 +10,11 @@
   <table class="govuk-table responsive tablesorter">
     <thead class="govuk-table__head">
     <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="col"><a
-        class='table-sorter__link' href='#'>Prisoner name</a></th>
+      <th class="govuk-table__header" scope="col">Prisoner name</th>
       <th class="govuk-table__header sorter-false" scope="col">Prisoner number</th>
       <th class="govuk-table__header sorter-false" scope="col">Release/parole<br/>eligibility</th>
-      <th class="govuk-table__header" scope="col"><a
-        class='table-sorter__link' href='#'>POM</a></th>
-      <th class="govuk-table__header" scope="col"><a
-        class='table-sorter__link' href='#'>Allocation date</a></th>
+      <th class="govuk-table__header" scope="col">POM</th>
+      <th class="govuk-table__header" scope="col">Allocation date</th>
       <th class="govuk-table__header sorter-false" scope="col">Action</th>
     </tr>
     </thead>
