--- a/app/views/summary/pending.html.erb
+++ b/app/views/summary/pending.html.erb
@@ -10,12 +10,12 @@
   <table class="govuk-table responsive tablesorter">
     <thead class="govuk-table__head">
     <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="col"><a href='#' class='table-sorter__link'>Prisoner name</a></th>
-      <th class="govuk-table__header sorter-false" scope="col">Prisoner number</th>
-      <th class="govuk-table__header" scope="col"><a href="#">Service provider</a></th>
-      <th class="govuk-table__header" scope="col"><a href="#">Tier</a></th>
-      <th class="govuk-table__header" scope="col"><a href="#">Waiting</a></th>
-      <th class="govuk-table__header sorter-false" scope="col">Action</th>
+      <th class="govuk-table__header" scope="col">Prisoner name</th>
+      <th class="govuk-table__header" scope="col">Prisoner number</th>
+      <th class="govuk-table__header" scope="col">Service provider</th>
+      <th class="govuk-table__header" scope="col">Tier</th>
+      <th class="govuk-table__header" scope="col">Waiting</th>
+      <th class="govuk-table__header" scope="col">Action</th>
     </tr>
     </thead>
     <tbody class="govuk-table__body">
