--- a/app/views/summary/unallocated.html.erb
+++ b/app/views/summary/unallocated.html.erb
@@ -22,8 +22,7 @@
   <table class="govuk-table responsive tablesorter">
     <thead class="govuk-table__head">
     <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="col"><a
-        class='table-sorter__link' href='#'>Prisoner name</th>
+      <th class="govuk-table__header" scope="col">Prisoner name</th>
       <th class="govuk-table__header sorter-false" scope="col">Prisoner number</th>
       <th class="govuk-table__header sorter-false" xscope="col">Release/parole<br/>eligibility</th>
       <th class="govuk-table__header sorter-false" scope="col">Responsibility</th>
