Move caseloads to its own controller
Move the caseload index and recent allocations to a new controller

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -43,7 +43,7 @@
   <div class="govuk-grid-column-one-third">
     <div class="wrapper">
       <h1 class="govuk-heading-s">
-        <%= link_to "See your caseload", my_caseload_path, class:"govuk-link" %>
+        <%= link_to "See your caseload", caseload_index_path, class:"govuk-link" %>
       </h1>
       <p class="govuk-body">All prisoners allocated to you.</p>
     </div>
@@ -51,7 +51,7 @@
   <div class="govuk-grid-column-one-third">
     <div class="wrapper">
       <h1 class="govuk-heading-s">
-        <%= link_to "See new allocations", new_cases_path, class:"govuk-link" %>
+        <%= link_to "See new allocations", new_caseload_path, class:"govuk-link" %>
       </h1>
       <p class="govuk-body">Prisoners allocated to you in the last seven days.</p>
     </div>
