--- a/app/views/poms/edit.html.erb
+++ b/app/views/poms/edit.html.erb
@@ -62,7 +62,13 @@
                      for="status-conditional-3">Inactive</label>
             </div>
             <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="status-3">
-              <h4 class="govuk-heading-s">If this POMs status becomes inactive their cases will need to be reallocated.</h4>
+              <div class="govuk-warning-text">
+                <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+                <strong class="govuk-warning-text__text">
+                  <span class="govuk-warning-text__assistive">Warning</span>
+                  If this POMs status becomes inactive their cases will need to be reallocated.
+                </strong>
+              </div>
             </div>
           </div>
         </fieldset>
