--- a/app/views/case_information/edit.html.erb
+++ b/app/views/case_information/edit.html.erb
@@ -6,7 +6,7 @@
 
 <h1 class="govuk-heading-xl govuk-!-margin-top-4 govuk-!-margin-bottom-4">Case information</h1>
 <h2 class="govuk-heading-m"><%= @prisoner.full_name %> - <%= @prisoner.offender_no %></h2>
-<p class="govuk-!-margin-bottom-8">You can find this information in NDelius</p>
+<p class="govuk-!-margin-bottom-8">You can find this information in NDelius.</p>
 
 <%= render :partial => "form", :locals => {
       :action => case_information_path(),
