--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
       <span class="hmpps__logotype-crest"></span>
       <span class="govuk-header__logotype">
         <span class="govuk-header__logotype-text moj-header__logotype-text">HMPPS </span>
-        <span class="govuk-!-font-size-24 govuk-!-font-weight-regular">Manage offenders in custody</span>
+        <span class="govuk-!-font-size-24 govuk-!-font-weight-regular">Allocate to a Prison Offender Manager (POM)</span>
       </span>
     </a>
     <ul id="navigation" class="hmpps-header__navigation" aria-label="Top Level Navigation">
