Add additional text box to overrides page
When going through the allocation flow you have the option to override
the POM type/level.  When overriding you are directed to a page where
you are required to choose the reason(s) from a list of checkboxes.
This piece of work implements the addition of a new text box which
asks for further detail if the overriding choice is related to
suitability.

--- a/app/views/overrides/new.html.erb
+++ b/app/views/overrides/new.html.erb
@@ -21,8 +21,16 @@
               <%= hidden_field_tag("override[nomis_offender_id]", @prisoner.offender_no) %>
               <%= hidden_field_tag("override[nomis_staff_id]", @pom.staff_id) %>
               <div class="govuk-checkboxes__item">
-                <%= check_box_tag("override[override_reasons][]", "complex",  override_reason_contains(@override, 'complex'), id: "override-1", class: "govuk-checkboxes__input") %>
-                <%= label_tag "override[override_reasons][]", complex_reason_label(@prisoner), class: 'govuk-label govuk-checkboxes__label' %>
+                <input class="govuk-checkboxes__input" id="override-conditional-1" name="override[override_reasons][]" type="checkbox" value="suitability" data-aria-controls="override-1"
+                       <%= 'checked=checked' if override_reason_contains(@override, 'suitability') %> >
+                <label class="govuk-label govuk-checkboxes__label"
+                       for="override-conditional-1"><%= complex_reason_label(@prisoner) %></label>
+              </div>
+              <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="override-1">
+                <div class="govuk-form-group <% if @override.errors[:suitability_detail].present? %>govuk-form-group--error<% end %>">
+                  <label class="govuk-label" for="provide-detail">Enter your reason for this decision</label>
+                  <textarea class="govuk-textarea" id="suitability-detail" name="override[suitability_detail]" rows="3" aria-describedby="suitability-detail-hint"></textarea>
+                </div>
               </div>
               <div class="govuk-checkboxes__item">
                 <%= check_box_tag("override[override_reasons][]", "no-staff", override_reason_contains(@override, 'no-staff'), id: "override-2", class: "govuk-checkboxes__input") %>
