Update content on offence info section

--- a/app/views/shared/_offence_info.html.erb
+++ b/app/views/shared/_offence_info.html.erb
@@ -9,7 +9,7 @@
     <td class="govuk-table__cell table_cell__left_align  govuk-!-width-one-half"><%= @prisoner.main_offence %></td>
   </tr>
   <tr class="govuk-table__row">
-      <td class="govuk-table__cell">Release parole/eligibility</td>
+      <td class="govuk-table__cell">Release / parole eligibility</td>
       <td class="govuk-table__cell table_cell__left_align">
         <%= parole_or_release_date(@prisoner) %>
       </td>
