--- a/app/views/errors/unauthorized.html.erb
+++ b/app/views/errors/unauthorized.html.erb
@@ -1,8 +1,7 @@
-<h1 class="govuk-heading-l">You do not have permission to access this page</h1>
+<h1 class="govuk-heading-l">This service is currently available in only a few prisons</h1>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds govuk-body-l">
-    You can go <a href="/">back to the dashboard</a> or <a href="<%= signout_path %>">sign out</a>
-    and login with a different account.
+    It’s a new service that will be available in more prisons soon.
   </div>
 </div>
