Handle missing release date
We need to show offenders who may not have a release date. This PR
starts that as well as adding:

- Fields for marking release_date as indeterminate, not currently used
- Parole date (so we can show it in the Release/Parole date column)

--- a/app/views/shared/_offence_info.html.erb
+++ b/app/views/shared/_offence_info.html.erb
@@ -10,7 +10,9 @@
   </tr>
   <tr class="govuk-table__row">
       <td class="govuk-table__cell">Release parole/eligibility</td>
-      <td class="govuk-table__cell table_cell__left_align"><%= format_date(@prisoner.release_date) %></td>
+      <td class="govuk-table__cell table_cell__left_align">
+        <%= parole_or_release_date(@prisoner) %>
+      </td>
     </tr>
   </tbody>
 </table>
