--- a/app/views/summary/unallocated.html.erb
+++ b/app/views/summary/unallocated.html.erb
@@ -36,7 +36,9 @@
       <tr class="govuk-table__row offender_row_<%= i %>">
         <td aria-label="Prisoner name" class="govuk-table__cell "><%= offender.full_name %></td>
         <td aria-label="Prisoner number" class="govuk-table__cell"><%= offender.offender_no %></td>
-        <td aria-label="Release/parole eligibility" class="govuk-table__cell"><%= format_date(offender.release_date) %></td>
+        <td aria-label="Release/parole eligibility" class="govuk-table__cell">
+          <%= parole_or_release_date(offender) %>
+        </td>
         <td aria-label="Case owner" class="govuk-table__cell">
           <%= responsibility_label(ResponsibilityService.new.calculate_case_owner(offender)) %>
         </td>
