--- a/app/views/shared/_offence_info.html.erb
+++ b/app/views/shared/_offence_info.html.erb
@@ -11,7 +11,7 @@
   <tr class="govuk-table__row">
       <td class="govuk-table__cell">Release / parole eligibility</td>
       <td class="govuk-table__cell table_cell__left_align">
-        <%= format_date(@prisoner.earliest_sentence_date) %>
+        <%= format_date(@prisoner.earliest_release_date) %>
       </td>
     </tr>
   </tbody>
