--- a/app/views/prisons/index.html.erb
+++ b/app/views/prisons/index.html.erb
@@ -4,7 +4,7 @@
 <h1 class="govuk-heading-xl govuk-!-margin-top-0 govuk-!-margin-bottom-4">Choose prison</h1>
 
 <ul class="govuk-list">
-  <% caseloads.each do |prison| %>
+  <% caseloads.sort.each do |prison| %>
     <li>
       <a href="<%= prisons_update_path(code: prison, next: @next) %>"><%= prison_title(prison) %></a>
     </li>
