--- a/app/views/poms/_caseload.html.erb
+++ b/app/views/poms/_caseload.html.erb
@@ -4,7 +4,7 @@
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="col">Prisoner name</th>
       <th class="govuk-table__header" scope="col">Prisoner number</th>
-      <th class="govuk-table__header" scope="col">Release/parole<br/>eligibility</th>
+      <th class="govuk-table__header" scope="col">Earliest release<br/>date</th>
       <th class="govuk-table__header" scope="col">Tier</th>
       <th class="govuk-table__header" scope="col">Allocation date</th>
       <th class="govuk-table__header" scope="col">Role</th>
@@ -15,7 +15,7 @@
     <tr class="govuk-table__row pom_cases_row_<%= i %>">
       <td aria-label="Prisoner name" class="govuk-table__cell "><%= sentence.full_name %></td>
       <td aria-label="Prisoner number" class="govuk-table__cell "><%= allocation.nomis_offender_id %></td>
-      <td aria-label="Release date" class="govuk-table__cell "><%= sentence.release_date %></td>
+      <td aria-label="Earliest release date" class="govuk-table__cell "><%= sentence.earliest_release_date %></td>
       <td aria-label="Tier" class="govuk-table__cell "><%= allocation.allocated_at_tier %></td>
       <td aria-label="Allocation date" class="govuk-table__cell "><%= format_date(allocation.created_at) %></td>
       <td aria-label="Role" class="govuk-table__cell "><%= allocation.responsibility %></td>
