--- a/app/views/summary/allocated.html.erb
+++ b/app/views/summary/allocated.html.erb
@@ -14,12 +14,14 @@
         <a href="<%= set_search_param('last_name') %>">
           Prisoner name
         </a>
+        <%= display_arrow('last_name') %>
       </th>
       <th class="govuk-table__header sorter-false" scope="col">Prisoner number</th>
       <th class="govuk-table__header sorter-false" scope="col">
         <a href="<%= set_search_param('earliest_release_date') %>">
           Earliest release date
         </a>
+        <%= display_arrow('earliest_release_date') %>
       </th>
       <th class="govuk-table__header" scope="col">POM</th>
       <th class="govuk-table__header" scope="col">Allocation date</th>
