--- a/app/views/summary/pending.html.erb
+++ b/app/views/summary/pending.html.erb
@@ -14,6 +14,7 @@
         <a href="<%= set_search_param('last_name') %>">
           Prisoner name
         </a>
+        <%= display_arrow('last_name') %>
       </th>
       <th class="govuk-table__header" scope="col">Prisoner number</th>
       <th class="govuk-table__header" scope="col">Service provider</th>
@@ -22,6 +23,7 @@
         <a href="<%= set_search_param('awaiting_allocation_for') %>">
           Waiting
         </a>
+        <%= display_arrow('awaiting_allocation_for') %>
       </th>
       <th class="govuk-table__header" scope="col">Action</th>
     </tr>
