Fix strange header rendering

--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -21,8 +21,7 @@
       <th class="govuk-table__header sorter-false" scope="col">Date of birth</th>
       <th class="govuk-table__header sorter-false" scope="col">Tier</th>
       <th class="govuk-table__header" scope="col">POM</th>
-      <th class="govuk-table__header" scope="col"><a
-      <th class="govuk-table__header sorter-false" scope="col">Action</th>
+      <th class="govuk-table__header" scope="col">Action</th>
     </tr>
     </thead>
     <tbody class="govuk-table__body">
