--- a/app/views/allocations/edit.html.erb
+++ b/app/views/allocations/edit.html.erb
@@ -12,4 +12,4 @@
 
 <hr class="govuk-section-break govuk-section-break--l govuk-section-break--invisible"/>
 
-<%= render 'allocations/pom_tables' %>
+<%= render 'allocations/pom_tables_reallocate' %>
